meteor/client/styles/scriptView.scss
/* ... */
@keyframes placeholder-shimmer {
	0% {
		background-position: -800px 0;
	}

	100% {
		background-position: 100vw 0;
	}
}

.script-view {
	padding-top: 7.8125rem;
	padding-bottom: 50vh;
	width: fit-content;
	padding-right: 100px;
	transition: 0s padding-right 0s;

	.script-view-nextline {
		width: calc(100% + 100px);
		transform: translateX(-100px);
		border-bottom-width: 2px;
		border-bottom-style: solid;
		border-color: $part-start-color;
		font-weight: lighter;
		line-height: 0px;
		height: 0px;

		&::after {
			content: ' ';
			display: block;
			position: absolute;
			bottom: -2wpx;
			left: -2px;
			width: 0;
			height: 0;
			border-style: solid;
			border-width: 13px 9px 9px 9px;
			border-color: $part-start-color transparent transparent transparent;
		}

		& > .autotag {
			position: relative;
			top: 27px;
			left: 0px;
			height: 0px;

			text-shadow: 0.5px 0.5px 8px rgba(0, 0, 0, 0.8);
		}
	}

	.script-view-endline {
		width: calc(100% + 100px);
		transform: translateX(-100px);
		border-top-width: 2px;
		border-top-style: solid;
		border-color: $part-start-color;
		font-weight: lighter;
		line-height: 0px;
		height: 5px;

		& > .endofshow {
			position: relative;
			top: 12px;
			left: 0px;
			height: 0px;

			text-shadow: 0.5px 0.5px 8px rgba(0, 0, 0, 0.8);
		}
	}

	.segment-script-view__sticky {
		position: sticky;
		top: 7.8125rem;
		z-index: 10;
		background-color: #252627;
		color: white;
		box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
		min-width: fit-content;
		width: calc(100vw - 84px);

		h1 {
			margin-bottom: 0px;
		}

		.segment-script-view__output {
			width: fit-content;
			color: $output-header-font-color;
			margin-left: $output-header-indent;

			border-color: $part-start-color;

			border-bottom-style: solid;
			border-bottom-width: 1px;

			.segment-script-view__output__label {
				h3 {
					margin-top: 5px;
					margin-bottom: 0px;
					margin-left: 8px;
				}
			}
		}

		.segment-script-view__layergroup {
			color: $output-header-font-color;
			white-space: nowrap;

			overflow: hidden;

			border-right-color: $part-start-color;
			border-right-style: solid;
			border-right-width: 2px;

			h4 {
				margin-top: 5px;
				margin-bottom: 3px;
				margin-left: 10px;
			}

			.segment-script-view__layergroup__script {
				width: $script-piece-size + 1px;
				display: inline-block;
			}

			.segment-script-view__layergroup__layer {
				width: $layergroup-piece-size;
				display: inline-block;
			}

			h4 {
				height: 20px;
				margin-right: 0;

				border-right-color: $part-start-color;
				border-right-style: solid;
				border-right-width: 1px;
			}

			.last_layer_in_group {
				border-right-width: 2px;

				&:nth-last-child(1) {
					border-right-width: 0px;

					h4 {
						border-right-width: 0px;
					}
				}
			}
		}
	}

	.script-view-part-container {
		display: flex;
		flex-wrap: nowrap;

		.script-view-part-container__scripts {
			width: $script-piece-size + 1px;
			min-height: 100px;

			border-color: #000;
			border-right-style: solid;
			border-right-width: 1px;

			& > .timecode {
				position: relative;
				top: 15px;
				height: 0px;
				left: -45px;
			}

			.script-view-script__pieces {
				color: black;
				width: 400px;
				height: 100%;

				.script-view-script___piece {
					height: 100%;

					p {
						height: 100%;
						background: white;
						margin: 0px;
						padding: 10px;
					}
				}
			}
		}

		// outer parent to cut a viewing window
		.container {
			width: 100%;
			height: 100%;

			display: flex;
			overflow: auto;
		}

		.flex-scroll {
			display: flex;
			align-items: center;
			justify-content: center;
			flex-wrap: nowrap;
		}

		.box {
			width: $layergroup-piece-size;
			height: 100%;

			display: flex;
			flex-direction: column;

			border-color: #000;
			border-right-style: solid;

			&:not(:last-child) {
				border-right-width: 1px;
			}

			&:last-child {
				width: $layergroup-piece-size + 2px;

				border-color: $part-start-color;
				border-right-width: 2px;
			}
		}

		.script-view-part-container__layergroups {
			color: black;
			display: flex;

			width: 100%;
		}

		.script-view-part-container__layergroup__piece {
			width: $layergroup-piece-size - 10px;
			margin: 5px;
			min-height: 25px;
			padding: 2px;
			overflow: hidden;

			font-weight: 400;

			background: #4b4b4b;
			color: white;

			@include item-type-colors();

			position: relative;
			z-index: 1;
			text-shadow: 0.5px 0.5px 8px rgba(0, 0, 0, 0.8);
			font-weight: 400;
			pointer-events: none;
			white-space: nowrap;

			//transform: translate3d(0, 0, 1px); // Just to make it render in front	}
		}

		.primaryGroup {
			width: $layergroup-piece-size - 1px;
			flex-grow: 1;
			margin: 0px;
			padding: 7px;
		}

		.transition {
			max-height: 28px;
		}
	}
}

body.vertical-overflow-only {
	overflow-x: hidden;
	overflow-y: auto;
}

body.no-overflow {
	overflow-x: hidden;
	overflow-y: hidden;
}
/* ... */

